--- a/tbx/static_src/sass/components/_quote-slider.scss
+++ b/tbx/static_src/sass/components/_quote-slider.scss
@@ -81,4 +81,12 @@
             margin-bottom: ($gutter * 6);
         }
     }
+
+    .proposition-section & {
+        &__icon {
+            @include media-query(large) {
+                margin-left: 0;
+            }
+        }
+    }
 }
